--- a/Land Based Classification.ipynb
+++ b/Land Based Classification.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,22 +53,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Using the OpenCV2 library, all of the image files are read into the notebook for use later in the project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Display the images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<matplotlib.axes._subplots.AxesSubplot at 0x27fa62e6308>,\n",
-       " <matplotlib.image.AxesImage at 0x27fa7dd9908>)"
+       "(<matplotlib.axes._subplots.AxesSubplot at 0x1dd31d4db08>,\n",
+       " <matplotlib.image.AxesImage at 0x1dd31db8408>)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -97,31 +104,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Above are the 6 images for use in theis task. They are all of the same scene, but with differing levels of quality."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Read in Ground Truth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[4 4 4 ... 4 4 4]\n",
-      " [4 4 4 ... 4 4 4]\n",
-      " [4 4 4 ... 4 4 4]\n",
-      " ...\n",
-      " [4 4 4 ... 2 2 2]\n",
-      " [4 4 4 ... 2 2 2]\n",
-      " [4 4 4 ... 2 2 2]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "matLab = sio.loadmat(\"ground_truth.mat\")\n",
     "ground_truth = matLab['labelled_ground_truth']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since this is a Python notebook and the data to be used is a MATLAB file, the data must be read in and converted using the \"scipy\" library."
    ]
   },
   {
@@ -140,14 +147,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def genXY():\n",
+    "    # Get a random integer for X\n",
     "    X = randint(0, 355)\n",
+    "    # Get a random integer for Y\n",
     "    Y = randint(0, 210)\n",
+    "    # Return  Y,X since numpy indexes this way.\n",
     "    return Y,X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above function generates X and Y coordinate values based on the size of the numpy array. Since the ground_truth has specified dimensions, we can set the upper bounds for the generator accordingly"
    ]
   },
   {
@@ -159,19 +176,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def genVector(x,y):\n",
+    "    # Declare an empty list\n",
     "    tmp = []\n",
+    "    # Append the pixel intensity for fe\n",
     "    tmp.append(fe[x,y,1])\n",
+    "    # Append the pixel intensity for le\n",
     "    tmp.append(le[x,y,1])\n",
+    "    # Append the pixel intensity for r\n",
     "    tmp.append(r[x,y,1])\n",
+    "    # Append the pixel intensity for g\n",
     "    tmp.append(g[x,y,1])\n",
+    "    # Append the pixel intensity for b\n",
     "    tmp.append(b[x,y,1])\n",
+    "    # Append the pixel intensity for nir\n",
     "    tmp.append(nir[x,y,1])\n",
+    "    # Return tmp\n",
     "    return tmp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based off of the passed (x,y) coordinate, generates a 6x1 vector. This is made by taking the pixel intensity from each of the 6 images loaded earlier."
    ]
   },
   {
@@ -183,32 +215,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def genAllPoints():\n",
+    "    # Declare an empty list\n",
     "    training_samples = []\n",
+    "    # Declare and set counters for each class in the ground_truth\n",
     "    counter1 = 0;\n",
     "    counter2 = 0;\n",
     "    counter3 = 0;\n",
     "    counter4 = 0;\n",
+    "    # While any counter is not equal to 5\n",
     "    while (counter1 < 5 or counter2 < 5 or counter3 < 5 or counter4 < 5):\n",
+    "        # Generate a set of coordinates\n",
     "        coords = genXY()\n",
+    "        # Get the class from the ground truth\n",
     "        val = ground_truth[coords[0],coords[1]]\n",
+    "        # If the class is 1 and we haven't got 5 of that class yet\n",
     "        if val == 1 and counter1 < 5:\n",
+    "            # Generate a vector and append it to training samples\n",
     "            training_samples.append(genVector(coords[0], coords[1]))\n",
+    "            # Increment the counter for this class\n",
     "            counter1+=1\n",
+    "        # If the class is 2 and we haven't got 5 of that class yet\n",
     "        elif val == 2 and counter2 < 5:\n",
+    "            # Generate a vector and append it to training samples\n",
     "            training_samples.append(genVector(coords[0], coords[1]))\n",
+    "            # Increment the counter for this class\n",
     "            counter2+=1\n",
+    "        # If the class is 3 and we haven't got 5 of that class yet\n",
     "        elif val == 3 and counter3 < 5:\n",
+    "            # Generate a vector and append it to training samples\n",
     "            training_samples.append(genVector(coords[0], coords[1]))\n",
+    "            # Increment the counter for this class\n",
     "            counter3+=1\n",
+    "        # If the class is 4 and we haven't got 5 of that class yet\n",
     "        elif val == 4 and counter4 < 5:\n",
+    "            # Generate a vector and append it to training samples\n",
     "            training_samples.append(genVector(coords[0], coords[1]))\n",
+    "            # Increment the counter for this class\n",
     "            counter4+=1\n",
+    "    # Return the training samples\n",
     "    return training_samples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function generates the 20 training vectors. Given that there are 4 classes and we want 20 vectors, we can assume that we want 5 instances of each class in the training set. This gives us a even distribution of the classes in the training set."
    ]
   },
   {
@@ -220,11 +277,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples = genAllPoints()"
+    "samples = genAllPoints()\n",
+    "samples = np.array(samples)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate the Mean Vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 82.4 ,  81.45, 105.05, 112.35, 104.4 , 113.95])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_vector = samples.mean(axis=0)\n",
+    "mean_vector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate the Covariance Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 6)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cov_mat = np.cov(samples, rowvar=0)\n",
+    "cov_mat"
    ]
   },
   {
@@ -233,6 +347,13 @@
    "source": [
     "## Gaussian Model Creation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
