Create classification scheme

--- a/Land Based Classification.ipynb
+++ b/Land Based Classification.ipynb
@@ -469,10 +469,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def determineClassification(classes):\n",
+    "    tmp = 0.0\n",
+    "    classification = -1\n",
+    "    for i in range(0, len(classes)):\n",
+    "        if(classes[i] > tmp):\n",
+    "            tmp = classes[i]\n",
+    "            classification = i+1\n",
+    "    return classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classify(pixel):\n",
+    "    classifier = [multivariate_normal.pdf(pixel, mean=mu_1, cov=cov_1),multivariate_normal.pdf(pixel, mean=mu_2, cov=cov_2),multivariate_normal.pdf(pixel, mean=mu_3, cov=cov_3),multivariate_normal.pdf(pixel, mean=mu_4, cov=cov_4)]\n",
+    "    return determineClassification(classifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testClassification = classify(class_2_samples[2])\n",
+    "testClassification"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -480,6 +521,30 @@
    "source": [
     "## Results and Evaluation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6.313304616288931e-14,\n",
+       " array([3.06412493e-19, 1.36267131e-17, 6.29600911e-24, 3.04626296e-19,\n",
+       "        3.75177921e-22]),\n",
+       " array([1.16130973e-17, 1.37454102e-15, 5.90787681e-21, 1.35206334e-18,\n",
+       "        9.30966653e-20]),\n",
+       " array([6.29698651e-024, 1.99634866e-025, 1.80749040e-032, 1.66987955e-133,\n",
+       "        1.79214592e-030])]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
